--- a/Authentication/templates/Authentication/base.html
+++ b/Authentication/templates/Authentication/base.html
@@ -63,6 +63,10 @@
           <a class="nav-link" href="{% url 'Game:player' %}">Players</a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'Game:news' %}">NEWS</a>
+        </li>
+
 
 
         <li class="nav-item">
