changed news ui and footer

--- a/Game/templates/Game/footer.html
+++ b/Game/templates/Game/footer.html
@@ -2,7 +2,7 @@
 </div>
 </div>
 <!-- Footer -->
-<footer class="bg-secondary text-center  fixed- text-white">
+<footer class="bg-primary text-center  fixed- text-white">
   <!-- Grid container -->
   <div class="container p-4">
 
