--- a/Game/templates/Game/news.html
+++ b/Game/templates/Game/news.html
@@ -11,25 +11,32 @@
 
 <div class="row">
     {% for n in news %}
-    <div class="col-md-4">
+    <div class="col-md-12">
         <div class="card mb-3">
-            <img src="{{n.image.url}}" class="card-img-top" alt="{{n.title}}"/>
-            <div class="card-body">
-              <h5 class="card-title">{{n.title}}</h5>
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="{{n.image.url}}" class="card-img-top" alt="{{n.title}}"/>
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">{{n.title}}</h5>
               
-              <p class="card-text">
-                <small class="text-muted">
-                   Uploaded On : <span class="text-success text-bold mx-2"> {{n.added_on | timesince }} ago.</span>
-                   
-                
-                 
-                </small>
-              </p>
-              <p class="card-text">
-                {{n.description | truncatechars:100}}
-              </p>
-              <a href="{% url 'Game:news-detail' n.id %}" class="btn btn-success" > View Details </a>
-            </div>
+                        <p class="card-text">
+                          <small class="text-muted">
+                             Uploaded On : <span class="text-success text-bold mx-2"> {{n.added_on | timesince }} ago.</span>
+                             
+                          
+                           
+                          </small>
+                        </p>
+                        <p class="card-text">
+                          {{n.description | truncatechars:100}}
+                        </p>
+                        <a href="{% url 'Game:news-detail' n.id %}" class="btn btn-success" > View Details </a>
+                      </div>
+                    </div>
+                </div>
+             
           </div>
           
     </div>
