added forgot password with OTP mail server and User Profile Page && added Khalti integration in client side only

--- a/Authentication/templates/Authentication/base.html
+++ b/Authentication/templates/Authentication/base.html
@@ -1,3 +1,11 @@
+<html>
+<head>
+    <script src="https://khalti.s3.ap-south-1.amazonaws.com/KPG/dist/2020.12.17.0.0.0/khalti-checkout.iffe.js"></script>
+</head>
+<body>
+    
+
+
 <!-- Font Awesome -->
 <link
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -73,10 +81,13 @@
           <a class="nav-link" href="{% url 'Game:match-summary' %}">Matches Summary</a>
         </li>
 
-        {% if user.is_authenticated %}
+        {% if user.is_premium %}
+       
         <li class="nav-item">
           <a class="nav-link" href="{% url 'Game:stream' %}">LIVE STREAMS</a>
         </li>
+        {% else %}
+        <button id="payment-button" class="btn btn-secondary">Pay with Khalti for Live Streams</button>
         {% endif %}
       </ul>
      
@@ -119,12 +130,13 @@
          
 
           {% if user.is_authenticated  %}
-          <li>
-            <a class="dropdown-item" href="#">My profile</a>
-          </li>
+       
         
           <li>
             <a class="dropdown-item" href="{% url 'Authentication:logout' %}">Logout</a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="{% url 'Authentication:user-profile' %}">My Profile</a>
           </li>
           {% else %}
           <li>
@@ -134,7 +146,12 @@
           <li>
             <a class="dropdown-item" href="{% url 'Authentication:register' %}">Register</a>
           </li>
-          
+          <li>
+            <a class="dropdown-item" href="{% url 'Authentication:reset-password' %}">Forgot Password</a>
+          </li>
+        
+
+       
           {% endif %}
           
         
@@ -144,6 +161,48 @@
     </div>
     <!-- Right elements -->
   </div>
+      <!-- Place this where you need payment button -->
+    
+    <!-- Place this where you need payment button -->
+    <!-- Paste this code anywhere in you body tag -->
+    <script>
+      var config = {
+          // replace the publicKey with yours
+          "publicKey": "test_public_key_da524d5caacf43e783dae5af42fbd411",
+          "productIdentity": "1234567890",
+          "productName": "Dragon",
+          "productUrl": "http://gameofthrones.wikia.com/wiki/Dragons",
+          "paymentPreference": [
+              "KHALTI",
+              "EBANKING",
+              "MOBILE_BANKING",
+              "CONNECT_IPS",
+              "SCT",
+              ],
+          "eventHandler": {
+              onSuccess (payload) {
+                  // hit merchant api for initiating verfication
+                  console.log(payload);
+              },
+              onError (error) {
+                  console.log(error);
+              },
+              onClose () {
+                  console.log('widget is closing');
+              }
+          }
+      };
+
+      var checkout = new KhaltiCheckout(config);
+      var btn = document.getElementById("payment-button");
+      btn.onclick = function () {
+          // minimum transaction amount must be 10, i.e 1000 in paisa.
+          checkout.show({amount: 10000});
+      }
+  </script>
+  <!-- Paste this code anywhere in you body tag -->
+
+
   <!-- Container wrapper -->
 </nav>
 <!-- Navbar -->
