--- a/Authentication/templates/Authentication/login.html
+++ b/Authentication/templates/Authentication/login.html
@@ -26,6 +26,11 @@ height: 100%;
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
           {% if error %}{{error}}{% endif %}
+          {% for m in messages %}
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{m}}
+          </div>
+          {% endfor %}
           <form method="POST">
               {% csrf_token %}
           
@@ -49,7 +54,10 @@ height: 100%;
               <input type="submit" class="btn btn-primary btn-lg"
                 style="padding-left: 2.5rem; padding-right: 2.5rem;" value="Login">
               <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="/register"
-                  class="link-danger">Register</a></p>
+                  class="link-success">Register</a></p>
+                  <p class="small fw-bold mt-2 pt-1 mb-0"> <a href="{% url 'Authentication:reset-password' %}"
+                    class="link-danger ">Forgot Password?</a></p>
+              
                 
             </div>
   
