--- a/Authentication/templates/Authentication/register.html
+++ b/Authentication/templates/Authentication/register.html
@@ -9,7 +9,7 @@
               <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
   
-                  <p class="text-center text-danger h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up for Beijing Olympics Portal</p>
+                  <p class="text-center text-success h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up for Beijing Olympics Portal</p>
   
                   <form class="mx-1 mx-md-4" method="POST">
                     {% csrf_token %}
